fix: chrome overflow x-scroll issue

--- a/components/game_of_life.css
+++ b/components/game_of_life.css
@@ -1,5 +1,5 @@
 #canvas-container{
-  width: 100vw;
+  width: 100%;
   height: 100lvh;
   position: relative;
   display: flex;
